# rust-web-server

./: Cargo.toml  stress_test.py  test_fragmentation.py
crates/http/: Cargo.toml
crates/http/src/: lib.rs  response.rs  tests.rs
crates/http/src/tests/: request_tests.rs  response_tests.rs
scripts/: test_api.sh  test_fragmentation.py
src/: main.rs  mrequest.rs  server.rs
src/mrequest/: middleware.rs  mroutes.rs
src/server/: chat.rs  jwt.rs  middleware.rs  models.rs  repo.rs  request.rs  response.rs  routes.rs  services.rs  websocket.rs
