[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/http"
]

[dependencies]
base64 = "0.22.1"
bcrypt = "0.19.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
http = { path = "crates/http" }

